Combining input types in one EditText

--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -44,7 +44,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/name_label_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/order_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/order_textview" />
 
     <EditText
         android:id="@+id/name_text"
@@ -68,7 +68,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/address_label_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/name_label" />
+        app:layout_constraintTop_toBottomOf="@+id/name_label" />
 
     <EditText
         android:id="@+id/address_text"
@@ -103,6 +103,29 @@
         android:hint="@string/enter_phone_hint"
         android:inputType="phone"
         app:layout_constraintStart_toEndOf="@+id/phone_label"
-        app:layout_constraintBaseline_toBaselineOf="@id/phone_label" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/phone_label" />
+
+    <TextView
+        android:id="@+id/note_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/note_label_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phone_label" />
+
+    <EditText
+        android:id="@+id/note_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:ems="10"
+        android:hint="@string/enter_note_hint"
+        android:inputType="textCapSentences|textMultiLine"
+        app:layout_constraintBaseline_toBaselineOf="@+id/note_label"
+        app:layout_constraintStart_toEndOf="@+id/note_label" />
 
 </android.support.constraint.ConstraintLayout>
