--- a/app/src/main/res/layout/activity_order.xml
+++ b/app/src/main/res/layout/activity_order.xml
@@ -91,7 +91,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onRadioButtonClicked"
-            android:text="@string/next_day_ground_delivery" />
+            android:text="@string/next_day_ground_delivery"
+            android:checked="true" />
 
         <RadioButton
             android:id="@+id/pickup"
