--- a/app/src/main/res/xml/sync_preferences.xml
+++ b/app/src/main/res/xml/sync_preferences.xml
@@ -18,13 +18,13 @@
 
     <SwitchPreferenceCompat
         app:key="sync"
-        app:title="@string/sync_title" />
+        app:title="@string/pref_sync_title_sync" />
 
     <SwitchPreferenceCompat
         app:dependency="sync"
         app:key="attachment"
-        app:summaryOff="@string/attachment_summary_off"
-        app:summaryOn="@string/attachment_summary_on"
-        app:title="@string/attachment_title" />
+        app:summaryOff="@string/pref_sync_attachment_summary_off"
+        app:summaryOn="@string/pref_sync_attachment_summary_on"
+        app:title="@string/pref_sync_title_attachment" />
 
 </PreferenceScreen>
