--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -41,4 +41,9 @@
         android:title="@string/action_favorites"
         android:icon="@drawable/ic_favorites"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="50"
+        android:title="@string/title_activity_settings"
+        app:showAsAction="never" />
 </menu>
